@@ -1,3 +1,9 @@
+2019-05-27  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	* meson.build: Bump default version to 2.5.7;
+	  use compiler.get_supported_arguments() to check all arguments at once,
+	  instead of looping through a list and checking them one at a time.
+
 2019-05-26  Pawel Salek  <pawsa0@gmail.com>
 
 	* NEWS, configure.ac: correct typos; bump version base for git builds.
